setup sonarqube and jacoco, removed openclover.#10